# testing-with-pytest

./: .gitignore  Makefile  Pipfile  README.md  hello.py  pyproject.toml
scripts/: checks.sh
src/maths/: pythagoras.py
src/tests/: conftest.py  fakes.py
src/tests/integration/: conftest.py  test_widget_writer.py
src/tests/unit/: test_pythagoras.py  test_widget_factory.py
src/utils/: external_api_caller.py  file_handler.py
src/widget/: widget.py  widget_factory.py  widget_writer.py
